# cop-modules2024

./: CMakeLists.txt  README.md  main.cpp  math.cpp  math_arithmetic.cpp
.github/workflows/: cmake-multi-platform.yml
app/: CMakeLists.txt  main.cpp
math/: CMakeLists.txt  blub.cpp  blub_impl.cpp  math.cpp  math_arithmetic.cpp  math_concepts.cpp  math_geometry.cpp  math_geometry_impl.cpp  math_print.cpp  math_statistics.cpp
math_test/: CMakeLists.txt  math_test.cpp
meta/: CMakeLists.txt  meta.cpp
